# Embedded-CAN-ISOTP

./: CAN_ISO15765.md  CMakeLists.txt  LICENSE  README.md  introduction_CANFD.md  setup_vcan.sh  start_gdbserver.sh
docs/: .$cantp_framework.drawio.bkp  .$test_environment.drawio.bkp  cantp_framework.drawio  test_environment.drawio
examples/: main.c  socket_main.c
inc/: isotp_config.h
src/: isotp.c  isotp_port.c
